# betomator

./: .gitignore  Procfile  README.md  app.py  auth.py  bets.py  dashboard.py  engine.py  models.py  payments.py  pyproject.toml  requirements.txt  run_server.sh  scoreboard.py
migrations/versions/: 193bd4ebc398_initial_schema.py
templates/: base.html  dashboard.html  help.html  layout.html  unauthorized.html
templates/bets/: bet.html  bid.html  create.html  list.html
templates/scoreboard/: scoreboard.html
