[tool.poetry]
name = "bet-o-mator"
version = "0.0.1"
description = "An online betting market."
authors = ["Johan Sannemo <jsannemo@jsannemo.se>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
flask-login = "^0.5.0"
flask-oauthlib = "^0.9.6"
bootstrap-flask = "^1.5.1"
flask-wtf = "^0.14.3"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
flask-migrate = "^2.5.3"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry>=1.1.4"]
